--- a/Sodokujs/sodoku.html
+++ b/Sodokujs/sodoku.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Sudoku - Paso a Paso</title>
+  <title>Sudoku - BQ </title>
   <style>
     body{font-family: Arial, Helvetica, sans-serif; background:#f3f4f6; color:#111; display:flex; align-items:center; justify-content:center; height:100vh; margin:0}
     .contenedor{background:white; padding:16px; border-radius:8px; box-shadow:0 6px 18px rgba(0,0,0,0.08); width:360px}
@@ -23,7 +23,7 @@
 </head>
 <body>
   <div class="contenedor">
-    <h1>Sudoku - Paso a Paso</h1>
+    <h1>Sudoku - BQ </h1>
     <table id="tablero"></table>
     <div class="controles">
       <button id="btnComprobar">Comprobar</button>
@@ -199,3 +199,6 @@
   </script>
 </body>
 </html>
+</body>
+</html>
+
